--- a/src/pages/styles/home.css
+++ b/src/pages/styles/home.css
@@ -181,12 +181,12 @@
   margin-right: 12px;
   color: #fff;
 }
-.support-payment span {
+.support-payment span a {
   cursor: pointer;
   color: #fac96f;
   font-weight: 600;
 }
-.support-payment span:hover {
+.support-payment span a:hover {
   color: #333;
 }
 
