--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,19 @@
     display: flex;
     flex-direction: column-reverse;
   }
-  .order-content {
-    /* display: none; */
+  .show-more {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0 11px;
+    margin: 11px 0;
+    cursor: pointer;
+  }
+  .show-more.show span:last-child {
+    transform: rotate(180deg)
+  }
+  .display-none {
+    display: none;
   }
   .order-info {
     box-sizing: border-box;
