--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -9,15 +9,23 @@
   align-items: center;
 }
 .footer h5 {
-  color: #333;
+  color: #727272;
   font-size: 15px;
 }
 
 .footer-support {
   display: flex;
-  color: #333;
+  color: #727272;
   align-items: center;
 }
 .footer-support span {
   margin-left: 6px;
+}
+
+@media screen and (max-width: 769px) {
+  .footer{
+    justify-content: flex-start;
+    padding-left : 20px;
+    gap: 0 30px;
+  }
 }
