--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,21 @@
   width: 60%;
   margin: 0 auto;
 }
+.container.header {
+  width: 70%;
+}
 .show-more {
   display: none
 }
 .show-more.show {
   display: none
+}
+.order-time {
+  box-sizing: border-box;
+  height: max-content !important;
+}
+.back-btn {
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1025px) {
@@ -23,7 +33,7 @@
     width: 90%;
   }
   .header-nav {
-    margin-left: 50px;
+    /* margin-left: 50px; */
   }
 }
 
@@ -56,13 +66,7 @@
     box-sizing: border-box;
     margin-top: 15px;
   }
-  .order-time {
-    box-sizing: border-box;
-    height: max-content !important;
-  }
-  .back-btn {
-    box-sizing: border-box;
-  }
+
 }
 
 @media screen and (max-width: 599px) {
