--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100vw;
   height: 70px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .header-nav {
